--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="../node_modules/es6-shim/es6-shim.min.js"></script>
+
+    <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+    <script src="../node_modules/rxjs/bundles/Rx.umd.js"></script>
+    <script src="../node_modules/angular2/bundles/angular2-all.umd.js"></script>
 </head>
 <body>
     {{title}}
